History year alignment issue resolved

--- a/src/app/history/history.component.scss
+++ b/src/app/history/history.component.scss
@@ -170,6 +170,16 @@ $date-box-bg-color: var(--box-date-background-color);
         right: -5px;
       }
 
+      .header {
+        display: block;
+        margin-bottom: 15px;
+    
+      }
+
+      .right {
+        padding-top: 10px;
+        text-align: left;
+      }
     
   }
 
